--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -16,7 +16,7 @@ header {
     position: fixed;
     width: 100%;
     top: 0;
-    z-index: 1000; /* Set a high z-index to ensure it's above other content */
+    z-index: 1000;
 }
 
 nav {
@@ -26,8 +26,8 @@ nav {
     padding: 10px;
     position: fixed;
     width: 100%;
-    top: 150px; /* Adjust based on the height of your header */
-    z-index: 1000; /* Set a high z-index to ensure it's above other content */
+    top: 150px;
+    z-index: 1000;
 }
 
 nav a {
@@ -46,15 +46,14 @@ nav a:hover {
 
 .content {
     padding: 20px;
-    margin-top: 80px; /* Adjust based on the combined height of header and nav */
+    margin-top: 80px;
 }
-
 .tab-content {
     display: none;
 }
 .background-image-container {
-    height: calc(100vh - 150px); /* Adjust based on the height of header and nav */
-    margin-top: 250px; /* Equal to the top position of nav */
+    height: calc(100vh - 150px);
+    margin-top: 250px;
     position: relative;
 }
 .tab-content.active {
@@ -74,17 +73,17 @@ header {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 20px; /* Adjust the gap between photo containers */
-    height: 100%; /* Adjust to fill the entire height */
+    gap: 20px;
+    height: 100%;
 
 }
 .photo-container {
     width: 400px;
-    height: 300px; /* Set a fixed height for the photo containers */
-    background-color: rgba(255, 255, 255, 0.5); /* Set a background color with transparency */
+    height: 300px;
+    background-color: rgba(255, 255, 255, 0.5);
     border-radius: 8px;
     overflow: hidden;
-    margin-bottom: 20px; /* Adjust the bottom margin to create a gap */
+    margin-bottom: 20px;
     position: relative;
 }
 
@@ -92,12 +91,12 @@ header {
 .photo-container img {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Maintains the aspect ratio and covers the entire container */
-    transition: transform 0.3s ease-in-out; /* Add a smooth transition effect */
+    object-fit: cover;
+    transition: transform 0.3s ease-in-out;
 
 }
 .photo-container img:hover {
-    transform: scale(1.1); /* Increase the size on hover (adjust the scale factor as needed) */
+    transform: scale(1.15);
 }
   
   .text {
@@ -157,17 +156,18 @@ header {
 }
 
 .nested-tabs a {
-    color: #fff; /* Text color for the nested tabs */
+    color: #fff;
     text-decoration: none;
     padding: 12px 25px;
     margin: 0 10px;
     border-radius: 5px;
-    background-color: #912c2c; /* Background color for the nested tabs */
+    background-color: #912c2c;
     transition: background-color 0.3s;
 }
 
 .nested-tabs a:hover {
-    background-color: #dd4040;
+    background-color: #272727;
+    
 }
 
 .nested-tab-content {
@@ -186,28 +186,27 @@ header {
 .nested-photo-column {
     display: flex;
     flex-direction: column;
-    gap: 20px; /* Adjust the gap between nested photo containers */
+    gap: 20px;
     align-items: center;
 }
 
-/* Styling for nested photo containers */
 .nested-photo-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 400px;
     text-align: center;
-    background-color: rgba(0, 0, 0, 0.5); /* Background color for the nested photo container */
+    background-color: rgba(0, 0, 0, 0.5);
     border-radius: 30px;
     overflow: hidden;
-    margin-bottom: 20px; /* Adjust the bottom margin to create a gap */
+    margin-bottom: 20px;
     position: relative;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: box-shadow 0.2s;
 }
 
 .nested-photo-container:hover {
-    box-shadow: 0 8px 16px rgba(110, 89, 89, 0.2);
+    background-color: rgba(255, 255, 255, 0.1);
 }
 
 .nested-photo-container img {
@@ -223,7 +222,7 @@ header {
     background: rgba(0, 0, 0, 0.7);
     color: #707070;
     font-size: 20px;
-    border-radius: 0 0 12px 12px; /* Rounded corners on the bottom */
+    border-radius: 0 0 12px 12px;
 }
 #tab4 {
     text-align: center;
@@ -256,21 +255,29 @@ th {
 tr:hover {
     background-color: rgba(0, 0, 0, 0.3);
 }
-.gallery-container {
+.centered-list {
+    list-style: none;
+    text-align: center;
+    padding: 0;
+    
+}
+
+.centered-list li {
+    color: #cacaca;
+    font-size: 20px;
+    margin-bottom: 10px;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
-.game-image {
-    margin-right: 20px; /* Adjust the margin as needed */
+.centered-list img {
+    width: 300px;
+    height: 300px;
+    margin-right: 10px;
 }
-
-.game-image img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-}
-
-.game-text {
-    text-align: left;
+.text-container {
+    background-color: rgba(61, 61, 61, 0.5);
+    padding-top: 20px;
+    border-radius: 10px;
 }
